[Mac] RTL-aware drawing and animation for the content settings decoration

BUG=648557

Review-Url: https://codereview.chromium.org/2564593002
Cr-Commit-Position: refs/heads/master@{#437301}

Former-commit-id: 24cb108d6ed64df2a989b99c609193c6ab67393f